tests/inputs/err_too_many_macro_args.txt.snap
!!!ERROR!!!

Error {
    kind: TooManyArguments,
    name: "err_too_many_macro_args.txt",
    line: 4,
}

too many arguments (in err_too_many_macro_args.txt:4)
------------------------- err_too_many_macro_args.txt -------------------------
   1 | {% macro two_args(a, b) %}
   2 |   {{ a }} and {{ b }}
   3 | {% endmacro %}
   4 > {{ two_args(1, 2, 3) }}
     i    ^^^^^^^^^^^^^^^^^ too many arguments
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    two_args: <macro two_args>,
}
-------------------------------------------------------------------------------

